--- a/src/app/dialogs/product-link/product-link.component.html
+++ b/src/app/dialogs/product-link/product-link.component.html
@@ -23,7 +23,7 @@
     <div class="row">
       <mat-divider></mat-divider>
       <div class="col col-md-12 text-right">
-        <button mat-raised-button color="primary" disabled="btnDisabled" (click)="addStockTranx()">ບັນທຶກ</button>
+        <button mat-raised-button color="primary" [disabled]="btnDisabled" (click)="addStockTranx()">ບັນທຶກ</button>
       </div>
     </div>
     <div class="row mt-2">
