--- a/src/app/pages/stocks/stocks.component.html
+++ b/src/app/pages/stocks/stocks.component.html
@@ -30,7 +30,7 @@
 
           <div class="col col-md-4">
             <div class="row mainrow">
-              <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
+              <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid" (click)="openProductTakeOff()">
                 <img src="../../../assets/icons/notepad.svg" class="gridImg">
                 <div class="textTitle h4">ອອກຂາຍ</div>
               </div>
