--- a/src/app/pages/kitchen-reports/kitchen-reports.component.html
+++ b/src/app/pages/kitchen-reports/kitchen-reports.component.html
@@ -41,20 +41,22 @@
                 <div class="col col-md-4">
                   <mat-card>
                     <mat-card-header>
-                      <mat-card-title class="text-center" style="font-size: 1.5em;font-weight: bold;">ຍອດສິນຄ້າໃນສາງ
-                        ປະຈຸບັນ
+                      <mat-card-title class="text-center" style="font-size: 1.5em;font-weight: bold;">
+                        ຍອດສິນຄ້າໃນສາງປະຈຸບັນ
                       </mat-card-title>
                     </mat-card-header>
                     <mat-card-content>
                       <div class="table-responsive">
-                        <table class="table  table-bordered table-hover">
+                        <table class="table table-bordered table-hover">
                           <thead class="thead-dark">
                             <tr>
-                              <th scope="col" class="text-left align-top">ວັດຖຸດິບ</th>
-                              <th scope="col" class="text-center align-top">ຈຳນວນໃນສາງ</th>
-                              <th scope="col" class="text-center align-top">ຂາຍອອກ</th>
-                              <th scope="col" class="text-center align-top">ຍອດປະຈຸບັນ</th>
-                              <th scope="col" class="text-center align-top">ຍອດຕ່ຳສຸດ</th>
+                              <th scope="col" class="text-left align-top">ສິນຄ້າ</th>
+                              <th scope="col" class="text-center align-top">ເຂົ້າສາງ</th>
+                              <th scope="col" class="text-center align-top">ຂາຍ</th>
+                              <th scope="col" class="text-center align-top">ປະຈຸບັນ</th>
+                              <th scope="col" class="text-center align-top">ແກັດ</th>
+                              <th scope="col" class="text-center align-top">ໜ່ວຍ</th>
+                              <th scope="col" class="text-center align-top">ຕ່ຳສຸດ</th>
                               <th scope="col" class="text-center align-top">ຫົວໜ່ວຍ</th>
                             </tr>
                           </thead>
@@ -67,6 +69,8 @@
                                 <td class="text-right text-nowrap">{{ currentStock.stock_quantity |number }}</td>
                                 <td class="text-right text-nowrap">{{ currentStock.used_quantity |number }}</td>
                                 <td class="text-right text-nowrap">{{ currentStock.CurrentQuantity |number }}</td>
+                                <td class="text-right text-nowrap">{{ currentStock.Dozen |number }}</td>
+                                <td class="text-right text-nowrap">{{ currentStock.Unit |number }}</td>
                                 <td class="text-right text-nowrap">{{ currentStock.minimum |number }}</td>
                                 <td class="text-center text-nowrap">{{ currentStock.unit_name }}</td>
                               </tr>
