--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -117,7 +117,14 @@
               <li class="list-group-item">
                 <div class="row">
                   <div class="col col-md-2 h5">ເນື້ອໃນ</div>
-                  <div class="col col-md-10 h5 font-weight-bold">{{ notice.message }}</div>
+                  <div class="col col-md-10 h5 font-weight-bold">
+                    <ul class="list-group">
+                      <li class="list-group-item bg-warning" *ngFor="let notice2 of notice.notices ; let i = index">
+                        {{ i+1 }}.
+                        {{ notice2}}
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </li>
               <li class="list-group-item">
