--- a/src/app/pages/stocks/stocks.component.html
+++ b/src/app/pages/stocks/stocks.component.html
@@ -32,7 +32,7 @@
             <div class="row mainrow">
               <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid" (click)="openProductTakeOff()">
                 <img src="../../../assets/icons/notepad.svg" class="gridImg">
-                <div class="textTitle h4">ອອກຂາຍ</div>
+                <div class="textTitle h4">ລາຍອອກສາງ</div>
               </div>
             </div>
           </div>
