update stock and stock view Bug

--- a/src/app/pages/kitchen-reports/kitchen-reports.component.html
+++ b/src/app/pages/kitchen-reports/kitchen-reports.component.html
@@ -82,6 +82,8 @@
                                   <td class="text-right text-nowrap">{{ currentStock.stock_quantity |number }}</td>
                                   <td class="text-right text-nowrap">{{ currentStock.used_quantity |number }}</td>
                                   <td class="text-right text-nowrap">{{ currentStock.CurrentQuantity |number }}</td>
+                                  <td class="text-right text-nowrap">{{ currentStock.Dozen |number }}</td>
+                                  <td class="text-right text-nowrap">{{ currentStock.Unit |number }}</td>
                                   <td class="text-right text-nowrap">{{ currentStock.minimum |number }}</td>
                                   <td class="text-center text-nowrap">{{ currentStock.unit_name }}</td>
                                 </tr>
