--- a/src/app/dialogs/product-takeoff/product-takeoff.component.html
+++ b/src/app/dialogs/product-takeoff/product-takeoff.component.html
@@ -34,13 +34,19 @@
           <label for="unitName">ຫົວໜ່ວຍ</label>
           <select class="form-control" (change)="unitPerPackSelected($event.target.value)">
             <option value="">ເລືອກ</option>
-            <option value="{{ unit.quantityPerUnit }}" *ngFor="let unit of units">{{ unit.unit_name }}</option>
+            <option value="{{ unit.quantityPerUnit + '|'+ unit.id + '|' + unit.unit_name }}" *ngFor="let unit of units">
+              {{ unit.unit_name }}
+            </option>
           </select>
         </div>
         <div class="form-group col-md-4">
           <label for="totalUsedQuantity">ຈຳນວນຕົວຈິງ</label>
           <input type="text" class="form-control text-right" readonly formControlName="totalUsedQuantity" required
             id="totalUsedQuantity">
+        </div>
+        <div class="form-group col-md-12">
+          <label for="remarks">ເນື້ອໃນ</label>
+          <input type="text-area" class="form-control text-right" formControlName="remarks" required id="remarks">
         </div>
       </div>
     </form>
