fix duplicate invoice no and some ui change

--- a/src/app/dialogs/view-order-details/view-order-details.component.html
+++ b/src/app/dialogs/view-order-details/view-order-details.component.html
@@ -8,10 +8,10 @@
     {{ data.ticket }}
   </div>
   <div class="col col-md-3">
-    ເລກອ້າງອິງ
+    ເລກບິນ
   </div>
   <div class="col col-md-3 mb-1" style="font-weight: bold;">
-    {{ data.refno }}
+    {{ data.invoiceno }}
   </div>
   <div class="col col-md-3">
     ເລກອ້າງອິງ
