update add purchase parseInt bug

--- a/src/app/dialogs/add-products/add-products.component.html
+++ b/src/app/dialogs/add-products/add-products.component.html
@@ -67,7 +67,7 @@
     <div class="form-group col-md-6">
       <label for="currentQuantity">Current Quantity</label>
       <input type="number" class="form-control text-right" id="currentQuantity" placeholder="Current Quantity"
-        formControlName="currentQuantity" required (keyup)="quantityCaculation()">
+        formControlName="currentQuantity">
     </div>
     <div class="form-group col-md-6">
       <label for="supplierId">Supplier</label>
