--- a/src/app/dialogs/add-purchase/add-purchase.component.html
+++ b/src/app/dialogs/add-purchase/add-purchase.component.html
@@ -25,7 +25,7 @@
           <label for="vendorId">ຜູ້ສະໜອງ</label>
           <select class="form-control" id="vendorId" formControlName="vendorId" required>
             <option value="-1">--------</option>
-            <option value="{{ vendor.id }}" *ngFor="let vendor of suppliers">{{ vendor.vendorName }}</option>
+            <option value="{{ vendor.id }}" *ngFor="let vendor of suppliers">{{ vendor.supplier_name }}</option>
           </select>
         </div>
         <div class="form-group col-md-12">
