--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -108,6 +108,11 @@
         </div>
       </ng-container>
     </div>
+    <!-- Charts -->
+    <div class="row">
+
+    </div>
+    <!-- Notification -->
     <div class="row">
       <div class="col col-md-12 col-sm-12">
         <div class="card">
